@@ -37,7 +37,8 @@ Library
 
 - Issue #7279: Comparisons involving a Decimal signaling NaN now
   signal InvalidOperation instead of returning False.  (Comparisons
-  involving a quiet NaN are unchanged.)
+  involving a quiet NaN are unchanged.)  Also, Decimal quiet NaNs
+  are now hashable;  Decimal signaling NaNs remain unhashable.
 
 - Issue #2531: Comparison operations between floats and Decimal
   instances now return a result based on the numeric values of the
